--- a/Attendance Management System/Attendance Management System/Attendance Management System.csproj
+++ b/Attendance Management System/Attendance Management System/Attendance Management System.csproj
@@ -10,7 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.0.9" />
+    <PackageReference Include="itext7" Version="8.0.3" />
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.3" />
+    <PackageReference Include="itext7.pdfhtml" Version="5.0.3" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
+    <PackageReference Include="PDFsharp" Version="6.1.0-preview-1" />
   </ItemGroup>
 
   <ItemGroup>
